kubernetes/sqlexpress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sqlexpress
  name: sqlexpress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sqlexpress
    spec:
      containers:
      - name: sqlexpress
        image: dotnet-core-web-sample_sqlexpress
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sqlexpress
spec:
  selector:
    app: sqlexpress
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
